--- a/3_HTSProject/.classpath
+++ b/3_HTSProject/.classpath
@@ -5,5 +5,10 @@
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Paulin/Downloads/json-simple-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Paulin/git/3_HTS_GWT/3_HTSProject/libs/jgoodies-common-1.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Paulin/git/3_HTS_GWT/3_HTSProject/libs/jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Paulin/git/3_HTS_GWT/3_HTSProject/libs/jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Paulin/git/3_HTS_GWT/3_HTSProject/libs/jgoodies-common-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
